--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <header>
          <h1 id="name">Payumo</h1>
          <img src="profile.jpg" alt="Profile Picture" id="profile-img">
-         <p id="course-year">Course - Year</p>
+         <p id="course-year">EMC - 2025-2026</p>
          <button id="theme-toggle">Switch Theme</button>
       </header>
       <section id="achievements">
