--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    </head>
    <body>
       <header>
-         <h1 id="name">Payumo</h1>
+         <h1 id="name">Joaquin Payumo</h1>
          <img src="profile_demo.png" alt="Profile Picture" id="profile-img">
          <p id="course-year">EMC - 2025-2026</p>
          <button id="theme-toggle">Switch Theme</button>
