Add previous schools section to index.html
Added a section for previous schools with a list.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,17 @@
       <section id="projects">
          <h2>Previous Projects</h2>
          <ul>
-            <li>Project 1</li>
+            <li>Saltwater Desalination Science Project</li>
             <li>Project 2</li>
             <li>Project 3</li>
+         </ul>
+      </section>
+      <section id="schools">
+         <h2>Previous Schools</h2>
+         <ul>
+            <li>School 1</li>
+            <li>School 2</li>
+            <li>School 3</li>
          </ul>
       </section>
       <script src="script.js"></script>
