Add portfolio link section to index.html

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
             <li>School 3</li>
          </ul>
       </section>
+      <section>
+         <h2>Link:</h2>
+         <li><a href="https://joaquinfranzpayumo.github.io/Portfolio_Work/">Portfolio</a></li>
+      </section>
+      
       <script src="script.js"></script>
    </body>
 </html>
