--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </section>
       <section>
          <h2>Link:</h2>
-         <li><a href="https://joaquinfranzpayumo.github.io/Portfolio_Work/">Portfolio</a></li>
+         <li><a href="https://joaquinfranzpayumo.github.io/Portfolio_Work/">Student Portfolio</a></li>
       </section>
       
       <script src="script.js"></script>
