--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
          <h2>Previous Projects</h2>
          <ul>
             <li>Saltwater Desalination Science Project</li>
-            <li>Project 2</li>
+            <li>Quizzies Video Game</li>
             <li>Project 3</li>
          </ul>
       </section>
       <section id="schools">
          <h2>Previous Schools</h2>
          <ul>
-            <li>School 1</li>
-            <li>School 2</li>
+            <li>Apo Learning Village</li>
+            <li>Beacon Learning Center</li>
             <li>School 3</li>
          </ul>
       </section>
