Add personality traits section and update achievements
Added a section for personality traits and updated achievements and projects.

--- a/index.html
+++ b/index.html
@@ -13,20 +13,29 @@
          <p id="course-year">EMC - 2025-2026</p>
          <button id="theme-toggle">Switch Theme</button>
       </header>
+      <section id="personality traits">
+         <h2>Personality Traits</h2>
+         <ul>
+            <li>Curious</li>
+            <li>Reserved</li>
+            <li>Hardworking</li>
+            <li>Sensitive</li>
+         </ul>
+      </section>
       <section id="achievements">
          <h2>Achievements/Certifications</h2>
          <ul>
-            <li>Achievement 1</li>
-            <li>Achievement 2</li>
-            <li>Achievement 3</li>
+            <li>Honors List First Quarter Grade 11 Disney</li>
+            <li>Dean's List and President's List 1st Term of SY 2024-2025</li>
+            <li>Certiport Exam</li>
          </ul>
       </section>
       <section id="projects">
          <h2>Previous Projects</h2>
          <ul>
-            <li>Saltwater Desalination Science Project</li>
+            <li>Homemade Saltwater Desalination Apparatus</li>
+            <li>Homemade Gel Air Freshener</li>
             <li>Quizzies Video Game</li>
-            <li>Project 3</li>
          </ul>
       </section>
       <section id="schools">
@@ -34,7 +43,6 @@
          <ul>
             <li>Apo Learning Village</li>
             <li>Beacon Learning Center</li>
-            <li>School 3</li>
          </ul>
       </section>
       <section>
