Add section for machine problems with links

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
             <li>Quizzies Video Game</li>
          </ul>
       </section>
+      <section id="machine problems">
+         <h2>Machine Problems</h2>
+         <ul>
+            <li>https://joaquinfranzpayumo.github.io/Week-3-MP1/</li>
+            <li>https://joaquinfranzpayumo.github.io/Week3-MP2/</li>
+         </ul>
+      </section>
       <section id="schools">
          <h2>Previous Schools</h2>
          <ul>
