Update links to Machine Problems with anchor tags

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <section id="machine problems">
          <h2>Machine Problems</h2>
          <ul>
-            <li>https://joaquinfranzpayumo.github.io/Week-3-MP1/</li>
-            <li>https://joaquinfranzpayumo.github.io/Week3-MP2/</li>
+            <li><a href="https://joaquinfranzpayumo.github.io/Week-3-MP1/">Machine Problem 1</a></li>
+            <li><a href="https://joaquinfranzpayumo.github.io/Week3-MP2/">Machine Problem 2</a></li>
          </ul>
       </section>
       <section id="schools">
