Add Exams section with M1 Summative Exam link

--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
             <li>Beacon Learning Center</li>
          </ul>
       </section>
+      <section id="exam">
+         <h2>Exams</h2>
+         <ul>
+            <li><a href="https://the-global-dashboard-6xh8hqd6a-joaquinfranzpayumos-projects.vercel.app/">M1 Summmative Exam - Part 3</a></li>
+         </ul>
+      </section>
       <section>
          <h2>Link:</h2>
          <li><a href="https://joaquinfranzpayumo.github.io/Portfolio_Work/">Student Portfolio</a></li>
